--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id="controls-container">
         <button id="start-stop-btn">Start Webcam</button>
-        <input type="file" id="upload-btn" accept="image/*">
+        <!--<input type="file" id="upload-btn" accept="image/*">-->
     </div>
 
     <div id="prediction-container" style="display: none;">
